@@ -6,6 +6,6 @@ Description: This package is a set of demonstration functions that can be used i
 Maintainer: Greg Snow <greg.snow@imail.org>
 License: Artistic-2.0
 Date: 2010-04-01
-Suggests: tkrplot, lattice, MASS, rgl, sgeostat, mapproj, tcltk, tcltk2
+Suggests: tkrplot, lattice, MASS, rgl, sgeostat, mapproj, tcltk, tcltk2, R2wd
 Enhances: maptools, qcc
 LazyData: true
