@@ -19,10 +19,11 @@ export(bct,char2seed,chisq.detail,ci.examp,clipplot,clt.examp,cnvrt.coords,
        vis.boxcox.old, vis.boxcoxu.old, sigma.test,
        vis.gamma,vis.normal,vis.t,z.test,zoomplot,tkexamp,col2grey,col2gray,
        TkApprox,TkSpline,txtStart,txtStop,txtComment,txtSkip,etxtStart,
-       etxtStop,etxtComment,etxtSkip,etxtPlot,dynIdentify,TkIdentify,
+       etxtStop,etxtComment,etxtSkip,etxtPlot,wdtxtStart,wdtxtStop,
+       wdtxtComment,wdtxtSkip,wdtxtPlot,dynIdentify,TkIdentify,
        Predict.Plot, TkPredict, "%<%", "%<=%", panel.my.symbols,
        SnowsPenultimateNormalityTest,vis.test,vt.qqnorm,vt.normhist,
-       vt.scatterpermute,vt.tspermute,vt.residpermute,
+       vt.scatterpermute,vt.tspermute,vt.residpermute,vt.residsim,
        SnowsCorrectlySizedButOtherwiseUselessTestOfAnything)
 
 
